--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <div class="signin_btn">
             <button>Sign in</button>
         </div>
+        <div class="signup_link">
+            <a href="./pages/signup.html">sign up</a>
+        </div>
     </div>
     </div>
 </div>
@@ -36,6 +39,8 @@
 
 
 
-<script src="./js/validation.js"></script>
+<script type="text/javascript" src="./js/validation.js"></script>
+
+<script type="text/javascript" src="./js/sign_in.js"></script>
 </body>
 </html>
