--- a/pages/signup.html
+++ b/pages/signup.html
@@ -17,13 +17,14 @@
     <div class="container signin_block">
         <div class="row">
         <div class="left_block col-lg-6 ">
-            <img src="../images/Chocolate Ice Cream.png" alt="">
+            <img src="../images/Signing A Document.png" alt="">
         </div>
         <div class="right_block col-lg-6">
         <div class="heading">
             <h2>Sign Up</h2>
         </div>
-        <div class="signin_form">
+        <form action="">
+        <div class="signin_form ">
             <input class="form-input full_name" type="text" placeholder="Full name">
             <input class="form-input email" type="text" placeholder="Email">
             <input class="form-input user_name" type="text" placeholder="Username">
@@ -34,12 +35,16 @@
         <div class="signup_btn">
             <button>Sign Up</button>
         </div>
+        <div class="signin_link">
+            <a href="../index.html">sign in</a>
+        </div>
+        </form>
         </div>
         </div>
     </div>
 </div>
 
-<script src="../js/validation.js"></script>
+<script type="text/javascript" src="../js/validation.js"></script>
 
 </body>
 </html>
