--- a/pages/signup.html
+++ b/pages/signup.html
@@ -23,7 +23,7 @@
         <div class="heading">
             <h2>Sign Up</h2>
         </div>
-        <form action="">
+        <form action=""  class="form" id="form">
         <div class="signin_form ">
             <input class="form-input full_name" type="text" placeholder="Full name">
             <input class="form-input email" type="text" placeholder="Email">
