--- a/pages/edit_choco.html
+++ b/pages/edit_choco.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <div class="cards_bg">
+   
         <div class="navbar">
 
 
@@ -23,9 +23,9 @@
                 <img src="../images/Melting Ice Cream white.png" alt="">
             </div>
             <div class="menu ">
-                <a href="">Home</a>
+                <a class="home">Home</a>
                 <a href="">Add Chochos</a>
-                <a href="">Account</a>
+                <a class="admin_account" href="">Account</a>
             </div>
             <div class="logout">
                 <img src="../images/Logout.png" alt="">
@@ -68,17 +68,7 @@
         </div>
 
 
-
-
-
-
-
-
-
-
-
-
-    </div>
+        
 </body>
 
 </html>
