--- a/pages/home.html
+++ b/pages/home.html
@@ -23,9 +23,10 @@
                 <img src="../images/Melting Ice Cream white.png" alt="">
             </div>
             <div class="menu ">
-                <a href="">Home</a>
-                <a href="">Add Chochos</a>
-                <a href="">Account</a>
+                <a class="home">Home</a>
+                <a href="./add_choco.html">Add Chochos</a>
+                <a class="admin_account" >Account</a>
+                <!-- <p class="admin_account">Account</p> -->
             </div>
             <div class="logout">
                 <img src="../images/Logout.png" alt="">
@@ -179,6 +180,8 @@
 
         
         <script src="../js/dynamicData.js"></script>
+        <script src="../js/adminaccount.js"></script>
+        
    
 </body>
 
