--- a/pages/add_choco.html
+++ b/pages/add_choco.html
@@ -23,9 +23,9 @@
                 <img src="../images/Melting Ice Cream white.png" alt="">
             </div>
             <div class="menu ">
-                <a href="">Home</a>
-                <a href="">Add Chochos</a>
-                <a href="">Account</a>
+                <a class="home">Home</a>
+                <a href="./add_choco.html">Add Chochos</a>
+                <a class="admin_account">Account</a>
             </div>
             <div class="logout">
                 <img src="../images/Logout.png" alt="">
