--- a/pages/admin_account.html
+++ b/pages/admin_account.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <div class="cards_bg">
+  
         <div class="navbar">
 
 
@@ -23,9 +23,9 @@
                 <img src="../images/Melting Ice Cream white.png" alt="">
             </div>
             <div class="menu ">
-                <a href="">Home</a>
-                <a href="">Add Chochos</a>
-                <a href="">Account</a>
+                <a class="home">Home</a>
+                <a href="./add_choco.html">Add Chochos</a>
+                <a class="admin_account">Account</a>
             </div>
             <div class="logout">
                 <img src="../images/Logout.png" alt="">
@@ -43,9 +43,9 @@
                     <h2>Admin Account</h2>
                 </div>
                 <div class="admin_input">
-                    <input type="text" placeholder="Fahad ul Hassan">
-                    <input type="text" placeholder="fahadulhassan2@gmail.com">
-                    <input type="text" placeholder="fahad1 22">
+                    <input class="admin_name" type="text" placeholder="Fahad ul Hassan">
+                    <input class="admin_email" type="text" placeholder="fahadulhassan2@gmail.com">
+                    <input class="admin_user_name" type="text" placeholder="fahad1 22">
                 </div>
                 <div class="admin_btn">
                     <button>Update</button>
@@ -63,9 +63,10 @@
 
 
 
+<script src="../js/adminaccount.js"></script>
+<script src="../js/dynamicData.js"></script>
 
-
-    </div>
+ 
 </body>
 
 </html>
