--- a/pages/edit_choco.html
+++ b/pages/edit_choco.html
@@ -20,7 +20,7 @@
 
 
             <div class="logo ">
-                <img src="../images/Melting Ice Cream white.png" alt="">
+                <a href="./home.html"><img src="../images/Melting Ice Cream white.png" alt=""></a>
             </div>
             <div class="menu ">
                 <a class="home">Home</a>
